<resources>
    <string name="app_name">Trading Simulation App</string>
    <string name="unknown_value">--</string>

    <string name="net_gain">Net Gain</string>
    <string name="investing_amount">Investing $%1s</string>
    <string name="change_value">%1s%%</string>

    <string name="reset_text">Reset</string>
    <string name="scrolling_text_default">--</string>

    <string name="trades_text">Trades</string>

    <string name="symbol_text">Symbol</string>
    <string name="change_text">Today\'s change</string>
    <string name="bid_price_text">Bid price</string>
    <string name="volume_text">Volume</string>

    <string name="qty_text">Qty</string>
    <string name="cost_text">Cost</string>
    <string name="ask_text">Ask price</string>
    <string name="profit_text">Profit</string>

    <string name="buy_text">Buy</string>
    <string name="sell_text">Sell</string>

    <string name="summary_text">Summary</string>
    <string name="portfolio_text">Portfolio</string>
    <string name="explore_text">Explore</string>

    <string name="widget_exit_text">Exit</string>

    <string name="buy_at_text">Buy at $%1s</string>
    <string name="sell_at_text">Sell at $%1s</string>

    <string name="confirm_exit">"Are you sure you want to exit?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>