<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StocksActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/stockTableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_height="wrap_content"
            style="@style/tableHeader"
            android:text="@string/symbol_text" />

        <TextView
            android:layout_height="wrap_content"
            style="@style/tableHeader"
            android:text="@string/change_text" />

        <TextView
            android:layout_height="wrap_content"
            style="@style/tableHeader"
            android:text="@string/bid_price_text" />

        <TextView
            android:layout_height="wrap_content"
            style="@style/tableHeader"
            android:text="@string/volume_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stocksView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomWidgetBar"
        app:layout_constraintTop_toBottomOf="@+id/stockTableHeader" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/bottomWidgetBar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:name="com.example.trading_app.BottomWidgetFragment"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>