<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PortfolioActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/portfolioHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/tableHeader"
            android:layout_height="wrap_content"
            android:text="@string/symbol_text" />

        <TextView
            style="@style/tableHeader"
            android:layout_height="wrap_content"
            android:text="@string/qty_text" />

        <TextView
            style="@style/tableHeader"
            android:layout_height="wrap_content"
            android:text="@string/cost_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/holdingsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomWidgetBar"
        app:layout_constraintTop_toBottomOf="@+id/portfolioHeader"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/bottomWidgetBar"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:name="com.example.trading_app.BottomWidgetFragment"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>